apps/the-race-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-the-race
  namespace: the-race
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate: { maxSurge: 1, maxUnavailable: 0 }
  selector:
    matchLabels: { app: web-the-race }
  template:
    metadata:
      labels: { app: web-the-race }
    spec:
      containers:
        - name: web-the-race
          image: ghcr.io/the-algovn/web-the-race:main
          ports: [{ containerPort: 80 }]
          readinessProbe:
            httpGet: { path: /the-race/, port: 80 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /the-race/, port: 80 }
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests: { cpu: 25m, memory: 32Mi }
            limits: { memory: 128Mi }
      imagePullSecrets:
        - name: registry-creds
